...
                            android:layout_centerVertical="true"
                            android:text="@string/me_page_location_text"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/me_page_section_text_size" />

                        <org.smartregister.view.LocationPickerView
                            android:id="@+id/facility_selection"
                            style="@style/me_page_location_selector"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_toEndOf="@+id/location_text"
...
                        android:layout_marginEnd="@dimen/me_page_initials_background_margin"
                        android:contentDescription="@string/section_icon"
                        android:gravity="center"
                        android:src="@drawable/ic_language" />

                    <TextView
                        android:id="@+id/language_switcher_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/register_search_bar_margin"
                        android:layout_toEndOf="@+id/language_switcher_image"
                        android:ellipsize="end"
...
                        android:layout_marginEnd="@dimen/me_page_initials_background_margin"
                        android:contentDescription="@string/section_icon"
                        android:gravity="center"
                        android:src="@drawable/ic_icon_pop_characteristics" />

                    <TextView
                        android:id="@+id/pop_characteristics_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/register_search_bar_margin"
                        android:layout_toEndOf="@+id/pop_characteristicsImageView"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:text="@string/population_characteristics"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/me_page_section_text_size" />

                    <ImageView
                        android:id="@+id/pop_characteristicsRightCaret"
                        android:layout_width="@dimen/me_page_section_square_dimension"
...
                        android:layout_marginEnd="@dimen/me_page_initials_background_margin"
                        android:contentDescription="@string/section_icon"
                        android:gravity="center"
                        android:src="@drawable/ic_icon_site_characteristics" />

                    <TextView
                        android:id="@+id/site_characteristics_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/me_page_section_text_right_margin"
                        android:layout_toEndOf="@+id/site_characteristicsImageView"
                        android:ellipsize="end"
...
                        android:layout_marginEnd="@dimen/me_page_initials_background_margin"
                        android:contentDescription="@string/section_icon"
                        android:gravity="center"
                        android:src="@drawable/ic_icon_logout" />

                    <TextView
                        android:id="@+id/logout_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/me_page_section_text_right_margin"
                        android:layout_toEndOf="@+id/logoutImageView"
                        android:text="@string/log_out_text"
...
