...
	<string name="clearing_application_data">Clearing application data...</string>


	<!-- Actions & Button Labels -->
	<!-- ======================= -->

	<string name="yes_button_label">Yes</string>
	<string name="no_button_label">No</string>
	<string name="ok">OK</string>
	<string name="str_next">Next &gt;&gt;</string>
	<string name="str_previous">&lt;&lt; Previous</string>
	<string name="str_page_info">Page {0} of {1}</string>
	<string name="refresh">Refresh</string>
...
	<!-- ====================== -->

	<string name="clients_menu">Clients</string>
	<string name="search_menu">Search</string>
	<string name="register_menu">Register</string>
	<string name="library_menu">Library</string>
	<string name="me">Me</string>


	<!-- Data Key Fields -->
	<!-- =============== -->

	<string name="clients_key">clients</string>
...
    <string name="completed">Completed</string>
	<string name="upcoming_contacts">Upcoming Contacts</string>
	<string name="age">AGE</string>
	<string name="weeks">weeks</string>
	<string name= "days">days</string>

	<string name="english_language">English</string>
	<string name="bahasa_indonesia_language">Bahasa (Indonesia)</string>
    <string name="years">Years</string>
	<string name="label_weeks">Weeks</string>
    <string name="mother_age">Mother\'s Age</string>
	<string name="gestational_age">Gestational Age</string>
	<string name="gestational_age_abrv">GA</string>
	<string name="gestational_age_warning">UK more than 42 weeks, must consult a doctor.</string>
...
