<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/customAppThemeBlue">

    <ImageButton
        android:id="@+id/close_characteristics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/characteristics_drawable_padding"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_cross_white" />

    <TextView
        android:id="@+id/characteristics_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/close_characteristics"
        android:gravity="center_vertical"
        android:text="@string/site_characteristics"
        android:textColor="@color/white"
        android:textSize="@dimen/characteristics_text_size" />

    <TextView
        android:id="@+id/characteristics_toolbar_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/characteristics_edit_button_margin_right"
        android:gravity="center_vertical"
        android:text="@string/action_edit"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

</RelativeLayout>