...
                    android:text="@string/show_password_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_edit_text_textSize" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_component_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_weight="8"
                android:background="@drawable/login_button"
...
                android:paddingBottom="5dp"
                android:text="Powered by"
                android:textAlignment="center"
                android:textColor="#A6ffffff" />

            <ImageView
                android:id="@+id/opensrp_logo_image_view"
                android:layout_width="@dimen/login_opensrp_logo_width"
                android:layout_height="@dimen/login_opensrp_logo_height"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
...
