<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_weight="2"
    android:background="#006EA0"
    android:gravity="center_vertical">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_weight="1.5">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="#006EA0"
            android:ellipsize="end"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:minWidth="100dp"
            android:padding="@dimen/register_search_bar_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/default_font_size_search_bar" />

        <ImageButton
            android:id="@+id/btn_search_cancel"
            android:layout_width="@dimen/ec_main_header_search_cancel_button_width"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/search_view_cancel_image_margin_right"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_cross"
            app:tint="#ffffff"
            android:visibility="gone" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/filter_sort_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/ec_main_header_search_layout_height"
        android:layout_marginStart="@dimen/search_bar_min_margin"
        android:layout_marginLeft="@dimen/search_bar_min_margin"
        android:layout_marginEnd="@dimen/register_search_bar_margin"
        android:layout_marginRight="@dimen/register_search_bar_margin"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/filter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:drawableStart="@drawable/ic_icon_filter"
            android:drawableLeft="@drawable/ic_icon_filter"
            android:drawablePadding="@dimen/register_search_bar_min_margin"
            android:ellipsize="end"
            android:foregroundTint="@color/white"
            android:gravity="center"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/filter"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_font_size_search_bar"
            app:drawableTint="#ffffff" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/due_only_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/ec_main_header_search_layout_height"
        android:layout_marginStart="@dimen/search_bar_min_margin"
        android:layout_marginLeft="@dimen/search_bar_min_margin"
        android:layout_marginEnd="@dimen/register_search_bar_margin"
        android:layout_marginRight="@dimen/register_search_bar_margin"
        android:layout_weight="0.75"
        android:visibility="gone">


        <TextView
            android:id="@+id/due_only_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:drawableEnd="@drawable/ic_due_filter_off"
            android:drawableRight="@drawable/ic_due_filter_off"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/due_only"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_font_size_search_bar" />
    </RelativeLayout>
</LinearLayout>