<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/pagination_bar_height">

    <Button
        android:id="@+id/btn_previous_page"
        android:layout_width="@dimen/pagination_bar_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/transparent_blue_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/pagination_previous"
        android:textSize="@dimen/pagination_bar_text_size" />

    <TextView
        android:id="@+id/txt_page_info"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="@dimen/pagination_bar_text_size" />

    <Button
        android:id="@+id/btn_next_page"
        android:layout_width="@dimen/pagination_bar_button_width"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:background="@drawable/transparent_blue_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingRight="10dp"
        android:text="@string/pagination_next"
        android:textSize="@dimen/pagination_bar_text_size" />
</RelativeLayout>
