...
    <string name="red">RED</string>
    <string name="record_birth">Record birth</string>
    <string name="the_qr_code_scanner_button">The QR Code Scanner button</string>
    <string name="woman_filter">Filter</string>
    <string name="clients">%1$d clients</string>
    <string name="client">%1$d client</string>
    <string name="register">Register</string>
    <string name="library">Library</string>
    <string name="me">Me</string>
    <string name="clients_menu">Clients</string>
    <string name="_0_clients_sort_updated">0 Clients (Sort: updated)</string>

    <string name="reason_for_coming_facility"><font fgcolor="black">Reason for coming to facility? </font><font fgcolor="red">*</font></string>

    <string name="first_contact">First contact</string>
...
